# ankcompiler

./: .gitignore  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: checks.yml  ci-cd.yml  deployment.yml
app/: config.py  main.py
app/cli/: __init__.py  build.py  check.py  deck.py  entry.py  gen.py  list.py  uid.py
app/logic/: deck.py  drivers.py  notes.py  parser.py  sources.py  stamping.py  utils.py  validation.py
app/models/: notes.py
examples/: example.md
scripts/: check_release.sh
tests/: test_cli.py  test_media.py  test_sources.py  test_stamping.py  test_utils.py  test_validation.py
tests/decks/: sample.md
